--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-uglify": "^0.6.0"
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsbeautifier": "^0.2.8",
+    "grunt-jsdoc": "^0.5.7"
   }
 }
